--- a/.github/workflows/test_libclouphxx.yml
+++ b/.github/workflows/test_libclouphxx.yml
@@ -149,8 +149,8 @@ jobs:
       working-directory: ${{github.workspace}}/parcel
       if: ${{matrix.long_tests}}
       run: |
-        py.test -v unit_test
-        py.test -v long_test
+        singularity exec $SI py.test -v unit_test
+        singularity exec $SI py.test -v long_test
 
     - name: run parcel tests debug
       working-directory: ${{github.workspace}}/parcel
@@ -190,6 +190,8 @@ jobs:
       with:
         repository: igfuw/libmpdataxx
         path: libmpdataxx
+
+    - run: echo ${{ github.workspace }}
 
     - name: Configure libmpdata++ CMake
       working-directory: ${{github.workspace}}/libmpdata++
@@ -232,20 +234,24 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: merge with the KiD-A branch
+      uses: devmasx/merge-branch@v1.4.0
+      with:
+        type: now
+        target_branch: kida-1d
+        github_token: ${{ github.token }}
 #      working-directory: ${{github.workspace}}/libcloudphxx
 
-#        git checkout -b tmp_branch # to get rid of the detached HEAD
-      run: |
-        git config user.email "pdziekan@fuw.edu.pl"
-        git config user.name "Piotr Dziekan"
-        git ls-remote --heads origin
-        git config --replace-all remote.origin.fetch "+refs/heads/*:refs/remotes/origin/*"
-        git fetch --all
-        git branch -r
-        git branch -v -a
-        git stash
-        git merge --verbose --progress --allow-unrelated-histories origin/kida-1d
-        git stash apply
+#      run: |
+#        git config user.email "pdziekan@fuw.edu.pl"
+#        git config user.name "Piotr Dziekan"
+#        git ls-remote --heads origin
+#        git config --replace-all remote.origin.fetch "+refs/heads/*:refs/remotes/origin/*"
+#        git fetch --all
+#        git branch -r
+#        git branch -v -a
+#        git stash
+#        git merge --verbose --progress --allow-unrelated-histories origin/kida-1d
+#        git stash apply
 
     - name: build libcloudph++
       #uses: igfuw/libcloudphxx_build@v0.1-beta
