--- a/.github/workflows/test_libclouphxx.yml
+++ b/.github/workflows/test_libclouphxx.yml
@@ -105,9 +105,9 @@ jobs:
       #  build_type: ["RelWithDebInfo", "Debug"]
         build_type: ["Debug"]
         include:
-        - build_type: "RelWithDebInfo"
-          long_tests: true
-          debug_tests: false
+ #       - build_type: "RelWithDebInfo"
+ #         long_tests: true
+ #         debug_tests: false
         - build_type: "Debug"
           long_tests: false
           debug_tests: true
