--- a/.github/workflows/test_libclouphxx.yml
+++ b/.github/workflows/test_libclouphxx.yml
@@ -159,7 +159,8 @@ jobs:
       working-directory: ${{github.workspace}}/parcel
       if: ${{matrix.debug_tests}}
       #run: singularity exec -B /usr/local $SI py.test-3 -v unit_test_debug
-      run: singularity exec -B /usr/local $SI python3 -m pytest -v unit_test_debug
+      run: singularity exec -B/usr/lib/python3/dist-packages:/usr/local/lib/python3.8/dist-packages $SI python3 -m pytest -v unit_test_debug
+      #libcloudphxx python bindings are installed in /usr/lib/python3/dist-packages, we need them mounted in a sys.path directory within the image, but without shadowing other packages. /usr/local/lib/python3.8/dist-packages is (hopefully) empty within the image
 
 #  kinematic_2D_test:
 #    needs: build
